finish responsive for desktop

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         Створювати власні мультики та ігри разом з Руденьким Котиком - це так цікаво! І найголовніше те, що не потрібно чекати, поки підростеш!
                     </p>
                     <span class="courses__list_item_info">
-                        Для дітей віком 5-6 років
+                        Для дітей віком 12 років
                     </span>
                 </li>
                 <li class="courses__list_item">
@@ -98,7 +98,7 @@
                         Створювати власні мультики та ігри разом з Руденьким Котиком - це так цікаво! І найголовніше те, що не потрібно чекати, поки підростеш!
                     </p>
                     <span class="courses__list_item_info">
-                        Для дітей віком 5-6 років
+                        Для дітей віком 12 років
                     </span>
                 </li>
                 <li class="courses__list_item">
@@ -110,7 +110,7 @@
                         Створювати власні мультики та ігри разом з Руденьким Котиком - це так цікаво! І найголовніше те, що не потрібно чекати, поки підростеш!
                     </p>
                     <span class="courses__list_item_info">
-                        Для дітей віком 5-6 років
+                        Для дітей віком 12 років
                     </span>
                 </li>
             </ul>
